Crear presupuesto 100% funcional, ajustes a las vistas y codigo mas limpio

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -47,9 +47,10 @@
         </script>
     <!--ApexCharts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
-    <!--Link del JS-->
-    <script src="/js/dashboard.js"></script>
+    <!--Link -->
     <script src="/js/index.js"></script>
+    <script type="module" src="/js/loadPresupuesto.js"></script>
+    <script src="/js/dashboard.js"></script>
 
 
 
