--- a/src/views/presupuesto/edit-presupuesto.hbs
+++ b/src/views/presupuesto/edit-presupuesto.hbs
@@ -130,9 +130,9 @@
                     <div class="row justify-content-end mx-auto p-2">
                         <div class="col-6 d-flex flex-column my-5 gap-2">
                             <div class="text-end">
-                                <label class="form-label fs-5 fw-bold" for="totalPrice">SubTotal: </label>
-                                <input class="form-control-sm fs-5 fw-bold" type="text" name="totalPrice"
-                                    id="totalPrice" size="20px" readonly />
+                                <label class="form-label fs-5 fw-bold" for="subTotal">SubTotal: </label>
+                                <input class="form-control-sm fs-5 fw-bold" type="text" name="subTotal" id="subTotal"
+                                    size="20px" readonly />
                             </div>
                             <div class="text-end">
                                 <label class="form-label fs-5 fw-bold" for="totalItbis">Total ITBIS: </label>
