Crear presupuesto concluido

--- a/src/views/404.hbs
+++ b/src/views/404.hbs
@@ -6,7 +6,7 @@
             <p class="lead">
                 Parece que la pagina que estas buscando no existe.
             </p>
-            <a {{#if user}}href="/" class="btn btn-primary btn-lg">Volver</a>
+            <a {{#if user}}href="/" class="btn btn-primary btn-lg">Volver al inicio</a>
         </div>
     </div>
 </div>
