--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -2,8 +2,8 @@
   <div class="col-md-4 offset-md-4">
     <div class="card card-body">
       <h1>Error interno del Servidor</h1>
-      <p>{{error}}</p>
-      <a href="/">Volver al inicio</a>
+      <p>La pagina tuvo un problema al cargar</p>
+      <a class="btn btn-primary btn-lg" href="/">Volver al inicio</a>
     </div>
   </div>
 </div>
