--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -7,7 +7,9 @@
         <hr class="my-4" />
         <p>Aprovecha ahora y crea tu cuenta para comenzar a probar todas nuestras funcionalidades.</p>
         <div class="bg-dark me-auto">
-            <a class="btn btn-primary btn-lg " href="/auth/registrar" role="button">¡Crea tu cuenta ahora!</a>
+            <a class="btn btn-primary btn-lg" href="/auth/registrar" role="button">
+                ¡Crea tu cuenta ahora!
+            </a>
         </div>
     </div>
 </div>
