--- a/src/views/presupuesto/all-presupuestos.hbs
+++ b/src/views/presupuesto/all-presupuestos.hbs
@@ -45,8 +45,8 @@
                 <td>{{nameActivity}}</td>
                 <td>{{typeActivity}}</td>
                 <td>{{nameClient}}</td>
-                <td>{{status}}</td>
-                <td>{{formatCurrency presupuestoData.subTotal}}</td>
+                <td>{{statusPresupuesto}}</td>
+                <td>{{formatCurrency totalAmount}}</td>
                 <td>
                     <div class="d-flex d-flex align-items-center justify-content-evenly gap-1 ps-3">
                         <a class="border-0 bg-transparent" href="/presupuesto/print/{{_id}}"><i
