--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -49,7 +49,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
     <!--Link -->
     <script src="/js/index.js"></script>
-    <script type="module" src="/js/loadPresupuesto.js"></script>
+    <script type="module" src="/js/tablePresupuesto.js"></script>
+    <script type="module" src="/js/formPresupuesto.js"></script>
     <script src="/js/dashboard.js"></script>
 
 
