--- a/src/views/presupuesto/new-presupuesto.hbs
+++ b/src/views/presupuesto/new-presupuesto.hbs
@@ -30,7 +30,8 @@
                     <div>
                         <div class="form-group">
                             <label for="phone">Telefono</label>
-                            <input type="tel" class="form-control" name="phone" value="{{phone}}" />
+                            <input type="tel" class="form-control" name="phone" id="phone" value="{{phone}}"
+                                maxlength="10" />
                         </div>
                         <div class="form-group">
                             <label for="email">Correo</label>
@@ -45,7 +46,8 @@
                     <div>
                         <div class="form-group">
                             <label for="dateActivity">Dia</label>
-                            <input type="date" class="form-control" name="dateActivity" value="{{dateActivity}}" />
+                            <input type="date" class="form-control" name="dateActivity" id="dateActivity"
+                                value="{{dateActivity}}" />
                         </div>
                         <div class="form-group">
                             <label for="timeActivity">Hora</label>
@@ -118,7 +120,7 @@
                                             placeholder="Bocinas" required />
                                     </td>
                                     <td>
-                                        <input class="form-control text-end totalArticle" type="number" step="0.1"
+                                        <input class="form-control text-end totalArticle" type="number" step="1"
                                             name="totalArticle[]" placeholder="0" required />
                                     </td>
                                     <td>
